Playing around with weapons

--- a/config.cfg
+++ b/config.cfg
@@ -34,8 +34,8 @@ bind "ALT" "+strafe"
 bind "CTRL" "+attack"
 bind "SHIFT" "+speed"
 bind "F1" "help"
-bind "F2" "menu_save"
-bind "F3" "menu_load"
+bind "F2" "v_gunkick 1"
+bind "F3" "v_gunkick 2"
 bind "F4" "menu_options"
 bind "F5" "menu_multiplayer"
 bind "F6" "echo Quicksaving...; wait; save quick"
@@ -113,26 +113,26 @@ saved3 "0"
 saved4 "0"
 savedgamecfg "0"
 scr_conalpha "0.5"
-scr_conscale "2.8"
+scr_conscale "1.9"
 scr_conspeed "500"
 scr_conwidth "0"
 scr_crosshairscale "3"
-scr_menuscale "2.8"
-scr_sbaralpha "0.5"
-scr_sbarscale "2.8"
-sensitivity "8"
+scr_menuscale "1.9"
+scr_sbaralpha "0.45"
+scr_sbarscale "1.9"
+sensitivity "5"
 sv_altnoclip "1"
 sys_throttle "0.02"
 vid_borderless "0"
-vid_bpp "24"
-vid_desktopfullscreen "1"
+vid_bpp "32"
+vid_desktopfullscreen "0"
 vid_fsaa "0"
-vid_fullscreen "1"
-vid_height "630"
+vid_fullscreen "0"
+vid_height "600"
 vid_refreshrate "60"
-vid_vsync "1"
-vid_width "1120"
-viewsize "110"
+vid_vsync "0"
+vid_width "800"
+viewsize "100"
 volume "0.5"
 vid_restart
 +mlook
