Initialized secondary fire trigger - NOT DONE

--- a/quake.rc
+++ b/quake.rc
@@ -15,3 +15,8 @@ stuffcmds
 
 // start demos if not allready running a server
 startdemos demo1 demo2 demo3
+
+alias +primary "impulse 210;+attack"
+alias -primary "-attack"
+alias +secondary "impulse 211;+attack"
+alias -secondary "-attack"
